add SET_ITEM dispatch and config Toolbtn

--- a/src/App.css
+++ b/src/App.css
@@ -463,7 +463,7 @@ form h1 {
   background: linear-gradient(0deg, #fff, #ddd);
   border-radius: 50%;
   line-height: calc(60px - 12px);
-  color: #262626;
+  color: var(--main-color);
   transition: .5s;
 }
 .tools > a:hover > .fas.fa-info {
