--- a/src/App.css
+++ b/src/App.css
@@ -596,7 +596,7 @@ form h1 {
 .select-images {
   width: 40px;
   height: 40px;
-  border: 1px solid var(--third-color);
+  border: 1px solid var(--main-color);
   border-radius: 50px;
 }
 .select-menu {
@@ -607,4 +607,34 @@ form h1 {
 .select-menu > p {
   margin: 0;
   padding-right: .3rem;
+}
+.profit {
+  position: relative;
+  width: 75px;
+  height: 35px;
+  -webkit-appearance: none;
+  background:#fafafa;
+  outline: none;
+  border-radius: 20px;
+  box-shadow: inset 0 0 5px rgba(0,0,0,.2);
+  transition: .5s;
+}
+.profit:checked {
+  background: var(--third-color);
+}
+.profit::before {
+  content:'';
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  border-radius: 20px;
+  top: 2%;
+  left: 0;
+  background:#fafafa;
+  transform: scale(1.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+  transition: .5s;
+}
+.profit:checked::before {
+  left: 40px;
 }
