--- a/src/App.css
+++ b/src/App.css
@@ -592,6 +592,7 @@ form h1 {
 .form-field > h3 {
   color: var(--third-color);
   margin-right: .5rem;
+  cursor: default;
 }
 .select-images {
   width: 40px;
@@ -618,6 +619,7 @@ form h1 {
   border-radius: 20px;
   box-shadow: inset 0 0 5px rgba(0,0,0,.2);
   transition: .5s;
+  cursor: pointer;
 }
 .profit:checked {
   background: var(--third-color);
