--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
 /* Root */
 :root {
   --main-color: #6a5acd;
   --second-color: #ae5fce;
-  --third-color: #75BE5C;
+  --third-color: #75be5c;
   --background: #f1e9f9;
-  font-family: 'Architects Daughter', cursive;
+  font-family: "Architects Daughter", cursive;
 }
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+input::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: var(--second-color);
   opacity: 1; /* Firefox */
 }
@@ -61,13 +62,13 @@ nav a {
   position: absolute;
   top: 60%;
   left: 51%;
-  transform: translate(-51%,-60%);
+  transform: translate(-51%, -60%);
   border-radius: 50%;
   border: 3px solid var(--third-color);
-  transition: ease-in .5s;
+  transition: ease-in 0.5s;
 }
 .landing2 {
-  mix-blend-mode:multiply;
+  mix-blend-mode: multiply;
 }
 @media screen and (max-width: 1024px) {
   .sign-in {
@@ -82,13 +83,13 @@ nav a {
     top: 70%;
   }
   #logo {
-    transition: ease-out .5s;  
+    transition: ease-out 0.5s;
   }
 }
 @media screen and (max-width: 890px) {
   #logo {
     width: 600px;
-    transition: ease-in .5s;
+    transition: ease-in 0.5s;
   }
   .icon {
     left: 50% !important;
@@ -168,16 +169,16 @@ nav a {
   }
 }
 @media screen and (max-width: 660px) {
-   h1 {
+  h1 {
     font-size: 1.5em;
   }
 }
 @media screen and (max-width: 540px) {
   input {
-    font-size: .5rem;
+    font-size: 0.5rem;
   }
   .fa-lg {
-    font-size: 1em;;
+    font-size: 1em;
   }
   button {
     padding: 12px 35px !important;
@@ -200,10 +201,10 @@ nav a {
 }
 @media screen and (max-width: 450px) {
   input {
-    font-size: .4rem;
+    font-size: 0.4rem;
   }
   .fa-lg {
-    font-size: .8em;;
+    font-size: 0.8em;
   }
   button {
     padding: 12px 35px !important;
@@ -214,23 +215,23 @@ nav a {
   }
   span:nth-last-of-type(1) {
     top: -9.4% !important;
-} 
+  }
 }
 /* LOGO */
 #logo {
   position: fixed;
   top: 58%;
   left: 50%;
-  transform: translate(-50%,-58%);
+  transform: translate(-50%, -58%);
   z-index: 1;
 }
-.logo{
+.logo {
   position: relative;
   width: 30%;
   top: 35%;
   left: 50%;
-  transform: translate(-50%,-50%);
-  transition: ease-in .5s;
+  transform: translate(-50%, -50%);
+  transition: ease-in 0.5s;
   z-index: 1;
 }
 .logoLink {
@@ -251,7 +252,7 @@ nav a {
 .container {
   background: #fff;
   border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   position: relative;
   overflow: hidden;
   width: 768px;
@@ -284,7 +285,7 @@ span {
   font-size: 12px;
 }
 input {
-  font-family: 'Architects Daughter', cursive;
+  font-family: "Architects Daughter", cursive;
 }
 a {
   color: #333;
@@ -329,11 +330,11 @@ form h1 {
 .social-container a:before,
 .social-container a:after {
   position: absolute;
-  content: '';
+  content: "";
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  transition: all .3s linear;
+  transition: all 0.3s linear;
 }
 .social-container a:nth-child(1):before {
   border: 2px solid #385898;
@@ -348,16 +349,16 @@ form h1 {
   background: #385898;
 }
 .social-container a:nth-child(2):before {
-  border: 2px solid #FF0000;
+  border: 2px solid #ff0000;
 }
 .social-container a:nth-child(2):after {
-  background: #FF0000;
+  background: #ff0000;
 }
 .social-container a:nth-child(3):before {
-  border: 2px solid #0077B5;
+  border: 2px solid #0077b5;
 }
 .social-container a:nth-child(3):after {
-  background: #0077B5;
+  background: #0077b5;
 }
 .social-container a:nth-child(4):before {
   border: 2px solid black;
@@ -380,24 +381,24 @@ form h1 {
   color: #385898;
 }
 .social-container a:nth-child(2) .fab {
-  color: #FF0000;
+  color: #ff0000;
 }
 .social-container a:nth-child(3) .fab {
-  color: #0077B5;
+  color: #0077b5;
 }
 .social-container a:nth-child(4) .fab {
   color: black;
 }
 .social-container a:hover .fab {
   color: white;
-  transition: .3s linear;
+  transition: 0.3s linear;
   z-index: 2;
 }
 .social-container a:nth-child(2) .fas {
-  color:#FF0000;
+  color: #ff0000;
 }
 .social-container a:nth-child(3) .fas {
-  color: #0077B5;
+  color: #0077b5;
 }
 .social-container a:nth-child(4) .fas {
   color: black;
@@ -407,7 +408,7 @@ form h1 {
 }
 .social-container a:hover .fas {
   color: white;
-  transition: .3s linear;
+  transition: 0.3s linear;
   z-index: 2;
 }
 .social-container a:hover:before {
@@ -419,7 +420,7 @@ form h1 {
   padding: 12px 15px;
   margin: 8px 0;
   width: 100%;
-  transition: all .1s linear
+  transition: all 0.1s linear;
 }
 .form-container {
   position: absolute;
@@ -450,7 +451,8 @@ form h1 {
 }
 .overlay {
   background: var(--second-color);
-  background: linear-gradient(to right, var(--second-color),var(--main-color)) no-repeat 0 0 / cover;
+  background: linear-gradient(to right, var(--second-color), var(--main-color))
+    no-repeat 0 0 / cover;
   color: #fff;
   position: relative;
   left: -100%;
@@ -501,27 +503,27 @@ form h1 {
   transform: translateX(20%);
 }
 .datatable-crud-demo .table-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .datatable-crud-demo .product-image {
-    width: 100px;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  width: 100px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 .datatable-crud-demo .p-dialog .product-image {
-    width: 150px;
-    margin: 0 auto 2rem auto;
-    display: block;
+  width: 150px;
+  margin: 0 auto 2rem auto;
+  display: block;
 }
 .datatable-crud-demo .confirmation-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.table-tittle{
-    font-size: 26px;
-    color: #5B78C7;
+.table-tittle {
+  font-size: 26px;
+  color: #5b78c7;
 }
 /* Tools buttons */
 .tools > a {
@@ -535,12 +537,12 @@ form h1 {
   padding: 7px;
   box-sizing: border-box;
   text-decoration: none;
-  box-shadow: 0 10px 15px rgba(0,0,0,0.3);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
   background: linear-gradient(0deg, #ddd, #fff);
-  transition: .5s;
+  transition: 0.5s;
 }
 .tools > a:hover {
-  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 .tools > a > .fas {
   width: 100%;
@@ -550,7 +552,7 @@ form h1 {
   border-radius: 50%;
   line-height: calc(60px - 12px);
   color: var(--main-color);
-  transition: .5s;
+  transition: 0.5s;
 }
 .tools > a:hover > .fas.fa-info {
   color: var(--third-color);
@@ -559,10 +561,10 @@ form h1 {
   background: var(--third-color);
 }
 .tools > a:hover > .fas.fa-recycle {
-  color: #FF0000;
+  color: #ff0000;
 }
 .tools > #recycle:hover {
-  background: #FF0000;
+  background: #ff0000;
 }
 /* Calendar */
 .rdrDayNumber > span {
@@ -591,7 +593,7 @@ form h1 {
 }
 .form-field > h3 {
   color: var(--third-color);
-  margin-right: .5rem;
+  margin-right: 0.5rem;
   cursor: default;
 }
 .select-images {
@@ -603,39 +605,39 @@ form h1 {
 .select-menu {
   display: inline-flex;
   align-items: center;
-  padding: .3rem;
+  padding: 0.3rem;
 }
 .select-menu > p {
   margin: 0;
-  padding-right: .3rem;
+  padding-right: 0.3rem;
 }
 .profit {
   position: relative;
   width: 75px;
   height: 35px;
   -webkit-appearance: none;
-  background:#fafafa;
+  background: #fafafa;
   outline: none;
   border-radius: 20px;
-  box-shadow: inset 0 0 5px rgba(0,0,0,.2);
-  transition: .5s;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
   cursor: pointer;
 }
 .profit:checked {
   background: var(--third-color);
 }
 .profit::before {
-  content:'';
+  content: "";
   position: absolute;
   width: 35px;
   height: 35px;
   border-radius: 20px;
   top: 2%;
   left: 0;
-  background:#fafafa;
+  background: #fafafa;
   transform: scale(1.1);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
-  transition: .5s;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
 }
 .profit:checked::before {
   left: 40px;
